Add Website markup draft

--- a/src/GeekStream.Web/Views/Shared/_Layout.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
+            <div class="container h-100">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img src="/images/NavBarLogo.png" width="50" height="43" alt="">
                 </a>
@@ -19,13 +19,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                    <ul class="navbar-nav flex-grow-1 align-items-center">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">Статьи</a>
                         </li>
@@ -35,7 +29,23 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Авторы</a>
                         </li>
+                        <li class="nav-item">
+                            <a asp-area="" asp-controller="Articles" asp-action="Create">
+                                <button type="button" class="btn btn-primary" >Написать статью</button>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <div class="form-inline">
+                                <input type="text" class="form-control" placeholder="Найти статью">
+                            </div>
+                        </li>
                     </ul>
+                    <a asp-area="" asp-controller="Users" asp-action="Create">
+                        <button type="button" class="btn btn-primary" >Войти</button>
+                    </a>
+                    <a asp-area="" asp-controller="Users" asp-action="Create">
+                        <button type="button" class="btn btn-primary" >Регистрация</button>
+                    </a>
                 </div>
             </div>
         </nav>
