--- a/src/GeekStream.Web/Views/Shared/_Layout.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_Layout.cshtml
@@ -35,9 +35,10 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <div class="form-inline">
-                                <input type="text" class="form-control" placeholder="Найти статью">
-                            </div>
+                            <form class="form-inline" asp-controller="Articles" asp-action="Index">
+                                <input type="text" name="SearchString" class="form-control" placeholder="Найти статью">
+                                <input type="submit" value="Filter">
+                            </form>
                         </li>
                     </ul>
                     <a asp-area="" asp-controller="Users" asp-action="Create">
