--- a/src/GeekStream.Web/wwwroot/css/site.css
+++ b/src/GeekStream.Web/wwwroot/css/site.css
@@ -1,6 +1,28 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+.feed {
+    width: 60%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.leftcolumn {
+    float: left;
+    width: 20%;
+    padding-right: 10px;
+}
+
+.rightcolumn {
+    float: right;
+    width: 20%;
+    padding-left: 10px;
+}
+
+.card {
+    width: 100%;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
