--- a/src/GeekStream.Web/Views/Home/Index.cshtml
+++ b/src/GeekStream.Web/Views/Home/Index.cshtml
@@ -4,33 +4,30 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-<div class="row">
-    <div class="col-sm-3">
-        <div style="height: 200px; background-color: aqua">Dummy</div>
-    </div>
     <div class="feed col-sm-6">
     @foreach (var item in Model)
     {
-<div class="row">
+    <div class="row mb-2">
         <div class="col">
             <div class="card">
                 <div class="card-body">
-                    <h2> @Html.DisplayFor(modelItem => item.Title)</h2>
-                    <h4>@Html.DisplayFor(modelItem => item.PostedOn)</h4>
+                    <div class="card-navbar">
+                        <p>Category</p>
+                        <p>@Html.DisplayFor(modelItem => item.PostedOn)</p>
+                    </div>
+                    <h3> @Html.DisplayFor(modelItem => item.Title)</h3>
                     @*
                     <img src="@Url.Content(item.Images.First().ImgPath)"/>
                     *@
                     <p>@Html.DisplayFor(modelItem => item.ShortDescription)</p>
+                    <div class="text-right mb-0">
+                        <p>@Html.DisplayFor(modelItem => item.Rating)</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     }
-</div>
-    <div class="col-sm-3">
-        <div style="height: 200px; background-color: aqua">Dummy</div>
-    </div>
 </div>
 @*
 <table class="table">
@@ -84,5 +81,7 @@
         
 }
     *@
+    @*
     </tbody>
 </table>
+*@
