--- a/src/GeekStream.Web/Views/Shared/_Layout.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_Layout.cshtml
@@ -30,9 +30,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Авторы</a>
                         </li>
                         <li class="nav-item">
-                            <a asp-area="" asp-controller="Articles" asp-action="Create">
-                                <button type="button" class="btn btn-primary" >Написать статью</button>
-                            </a>
+                            <a class="btn btn-primary" asp-area="" asp-controller="Articles" asp-action="Create">Написать статью</a>
                         </li>
                         <li class="nav-item">
                             <form class="form-inline" asp-controller="Articles" asp-action="Index">
@@ -52,9 +50,14 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <div class="row">
+            <div class="col-sm-3">
+                <div style="height: 200px; background-color: aqua">Dummy</div>
+            </div>
             @RenderBody()
-        </main>
+        <div class="col-sm-3">
+            <div style="height: 200px; background-color: aqua">Dummy</div>
+        </div>
     </div>
 
     <footer class="border-top footer text-muted">
