--- a/src/GeekStream.Web/Views/Articles/Create.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Create.cshtml
@@ -3,13 +3,13 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create</h1>
-
-<h4>Article</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <h1>Create</h1>
+
+    <h4>Article</h4>
+</div>
+<div class="row">
+    <div class="col-md-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -21,11 +21,6 @@
                 <label asp-for="Content" class="control-label"></label>
                 <input asp-for="Content" class="form-control" />
                 <span asp-validation-for="Content" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ShortDescription" class="control-label"></label>
-                <input asp-for="ShortDescription" class="form-control" />
-                <span asp-validation-for="ShortDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PostedOn" class="control-label"></label>
