--- a/src/GeekStream.Web/Views/Articles/Index.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Index.cshtml
@@ -1,65 +1,38 @@
-﻿@model IEnumerable<GeekStream.Core.Entities.Article>
+﻿@model IEnumerable<GeekStream.Core.ViewModels.ArticleViewModel>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
+<div class="col-sm-6"><p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Content)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ShortDescription)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PostedOn)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Author)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Rating)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Content)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ShortDescription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PostedOn)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Author.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rating)
-            </td>
-            <td>
+    @foreach (var item in Model)
+    {
+    <div class="row mb-2">
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-navbar">
+                        <p>@Html.DisplayFor(modelItem => item.Category)</p>
+                        <p>@Html.DisplayFor(modelItem => item.PublishedDate)</p>
+                        <p>@Html.DisplayFor(modelItem => item.Author)</p>
+                    </div>
+                    <h3> @Html.DisplayFor(modelItem => item.Title)</h3>
+                    @*
+                    <img src="@Url.Content(item.Images.First().ImgPath)"/>
+                    *@
+                    <p>@Html.DisplayFor(modelItem => item.Content)</p>
+                    <div class="text-right mb-0">
+                        <p>@Html.DisplayFor(modelItem => item.Rating)</p>
+                    </div>
+                </div>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+            </div>
+        </div>
+    </div>
+    }
+</div>
+
