--- a/src/GeekStream.Web/Views/Home/Index.cshtml
+++ b/src/GeekStream.Web/Views/Home/Index.cshtml
@@ -1,10 +1,11 @@
-﻿@model IEnumerable<GeekStream.Core.Entities.Article>
+﻿@using GeekStream.Core.ViewModels
+@model IEnumerable<GeekStream.Core.ViewModels.ArticleViewModel>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-    <div class="feed col-sm-6">
+    <div class="feed col-md-6">
     @foreach (var item in Model)
     {
     <div class="row mb-2">
@@ -12,14 +13,15 @@
             <div class="card">
                 <div class="card-body">
                     <div class="card-navbar">
-                        <p>Category</p>
-                        <p>@Html.DisplayFor(modelItem => item.PostedOn)</p>
+                        <p>@Html.DisplayFor(modelItem => item.Category)</p>
+                        <p>@Html.DisplayFor(modelItem => item.PublishedDate)</p>
+                        <p>@Html.DisplayFor(modelItem => item.Author)</p>
                     </div>
                     <h3> @Html.DisplayFor(modelItem => item.Title)</h3>
                     @*
                     <img src="@Url.Content(item.Images.First().ImgPath)"/>
                     *@
-                    <p>@Html.DisplayFor(modelItem => item.ShortDescription)</p>
+                    <p>@Html.DisplayFor(modelItem => item.Content)</p>
                     <div class="text-right mb-0">
                         <p>@Html.DisplayFor(modelItem => item.Rating)</p>
                     </div>
