--- a/src/GeekStream.Web/Views/Shared/_Layout.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_Layout.cshtml
@@ -33,9 +33,8 @@
                             <a class="btn btn-primary" asp-area="" asp-controller="Articles" asp-action="Create">Написать статью</a>
                         </li>
                         <li class="nav-item">
-                            <form class="form-inline" asp-controller="Articles" asp-action="Index">
+                            <form class="form-inline" asp-controller="Articles" asp-action="Index" method="get">
                                 <input type="text" name="SearchString" class="form-control" placeholder="Найти статью">
-                                <input type="submit" value="Filter">
                             </form>
                         </li>
                     </ul>
@@ -51,12 +50,13 @@
     </header>
     <div class="container">
         <div class="row">
-            <div class="col-sm-3">
+            <div class="col-md-3">
                 <div style="height: 200px; background-color: aqua">Dummy</div>
             </div>
             @RenderBody()
-        <div class="col-sm-3">
-            <div style="height: 200px; background-color: aqua">Dummy</div>
+            <div class="col-md-3">
+                <div style="height: 200px; background-color: aqua">Dummy</div>
+            </div>
         </div>
     </div>
 
