Add User registration

--- a/src/GeekStream.Web/Views/Shared/_Layout.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_Layout.cshtml
@@ -41,13 +41,13 @@
                         </li>
                     </ul>
                     @*
-                    <a asp-area="" asp-controller="Users" asp-action="Create">
+                    <a asp-area="" asp-controller="Account" asp-action="Create">
                         <button type="button" class="btn btn-primary" >Войти</button>
                     </a>
-                    <a asp-area="" asp-controller="Users" asp-action="Create">
+                    *@
+                    <a asp-area="" asp-controller="Account" asp-action="Register">
                         <button type="button" class="btn btn-primary" >Регистрация</button>
                     </a>
-                *@
                 </div>
             </div>
         </nav>
