--- a/src/GeekStream.Web/Views/Shared/_Layout.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_Layout.cshtml
@@ -40,11 +40,9 @@
                             </form>
                         </li>
                     </ul>
-                    @*
-                    <a asp-area="" asp-controller="Account" asp-action="Create">
+                    <a asp-area="" asp-controller="Account" asp-action="Login">
                         <button type="button" class="btn btn-primary" >Войти</button>
                     </a>
-                    *@
                     <a asp-area="" asp-controller="Account" asp-action="Register">
                         <button type="button" class="btn btn-primary" >Регистрация</button>
                     </a>
