--- a/src/GeekStream.Web/Views/Categories/Create.cshtml
+++ b/src/GeekStream.Web/Views/Categories/Create.cshtml
@@ -3,13 +3,14 @@
 @{
     ViewData["Title"] = "Create";
 }
-
-<h1>Create</h1>
-
-<h4>Category</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <h1>Create</h1>
+
+    <h4>Category</h4>
+</div>
+
+<div class="row">
+    <div class="col">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -30,7 +31,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="All">Back to List</a>
 </div>
 
 @section Scripts {
