--- a/src/GeekStream.Web/Views/Categories/Index.cshtml
+++ b/src/GeekStream.Web/Views/Categories/Index.cshtml
@@ -1,41 +1,31 @@
-﻿@model IEnumerable<GeekStream.Core.Entities.Category>
+﻿@using GeekStream.Core.ViewModels
+@model IEnumerable<GeekStream.Core.ViewModels.ArticleViewModel>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+@foreach (var item in Model)
+    {
+    <div class="row mb-2">
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-navbar">
+                        <p>@Html.DisplayFor(modelItem => item.Category)</p>
+                        <p>@Html.DisplayFor(modelItem => item.PublishedDate)</p>
+                        <p>@Html.DisplayFor(modelItem => item.Author)</p>
+                    </div>
+                    <h3> @Html.DisplayFor(modelItem => item.Title)</h3>
+                    @*
+                    <img src="@Url.Content(item.Images.First().ImgPath)"/>
+                    *@
+                    <p>@Html.DisplayFor(modelItem => item.Content)</p>
+                    <div class="text-right mb-0">
+                        <p>@Html.DisplayFor(modelItem => item.Rating)</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    }
