--- a/src/GeekStream.Web/Views/Categories/Index.cshtml
+++ b/src/GeekStream.Web/Views/Categories/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-@foreach (var item in Model)
+    @foreach (var item in Model)
     {
     <div class="row mb-2">
         <div class="col">
@@ -16,10 +16,9 @@
                         <p>@Html.DisplayFor(modelItem => item.PublishedDate)</p>
                         <p>@Html.DisplayFor(modelItem => item.Author)</p>
                     </div>
-                    <h3> @Html.DisplayFor(modelItem => item.Title)</h3>
-                    @*
-                    <img src="@Url.Content(item.Images.First().ImgPath)"/>
-                    *@
+                    <a asp-controller="Articles" asp-action="Details" asp-route-id="@item.Id">
+                        <h3> @Html.DisplayFor(modelItem => item.Title)</h3>
+                    </a>
                     <p>@Html.DisplayFor(modelItem => item.Content)</p>
                     <div class="text-right mb-0">
                         <p>@Html.DisplayFor(modelItem => item.Rating)</p>
