--- a/src/GeekStream.Web/Views/Home/Index.cshtml
+++ b/src/GeekStream.Web/Views/Home/Index.cshtml
@@ -6,9 +6,7 @@
 <h3 mb-2>Лента</h3>
     @foreach (var item in Model)
     {
-    <div class="row mb-2">
-        <div class="col">
-            <div class="card">
+            <div class="card mb-2">
                 <div class="card-body">
                     <div class="card-navbar">
                         <p>@Html.DisplayFor(modelItem => item.Category)</p>
@@ -16,7 +14,7 @@
                         <p>@Html.DisplayFor(modelItem => item.Author)</p>
                     </div>
                     <a asp-controller="Articles" asp-action="Details" asp-route-id="@item.Id">
-                        <h3> @Html.DisplayFor(modelItem => item.Title)</h3>
+                        <h3 class="card-title"> @Html.DisplayFor(modelItem => item.Title)</h3>
                     </a>
                     <p>@Html.DisplayFor(modelItem => item.Content)</p>
                     <div class="text-right mb-0">
@@ -24,6 +22,4 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
     }
