Add Authors tab

--- a/src/GeekStream.Web/Views/Categories/Index.cshtml
+++ b/src/GeekStream.Web/Views/Categories/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model IEnumerable<GeekStream.Core.ViewModels.ArticleViewModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Categories";
 }
 
-    @foreach (var item in Model)
+
+@foreach (var item in Model)
     {
             <div class="card mb-2">
                 <div class="card-body">
