--- a/src/GeekStream.Web/Views/Admin/ListRoles.cshtml
+++ b/src/GeekStream.Web/Views/Admin/ListRoles.cshtml
@@ -22,6 +22,7 @@
                 <div class="card-footer">
                     <a class="btn btn-primary" asp-controller="Admin" asp-action="EditRole" asp-route-id="@role.Id">Edit</a>
                     <a class="btn btn-danger">Delete</a>
+                    <a class="btn btn-outline-primary" asp-action="Index">Back</a>
                 </div>
         </div>
     }
