--- a/src/GeekStream.Web/Views/Admin/DeleteCategory.cshtml
+++ b/src/GeekStream.Web/Views/Admin/DeleteCategory.cshtml
@@ -25,7 +25,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="DeleteCategory">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
