--- a/src/GeekStream.Web/Views/Categories/All.cshtml
+++ b/src/GeekStream.Web/Views/Categories/All.cshtml
@@ -1,19 +1,19 @@
 ﻿@model IEnumerable<GeekStream.Core.Entities.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Categories";
 }
-<div class="row h-25">
-@foreach (var item in Model)
-{
+
+    <div class="row h-25">
+        @foreach (var item in Model)
+        {
         <div class="col-md-4">
             <div class="card">
-                <form asp-controller="Categories" asp-action="Index" method="get">
-                    <button type="submit" class="btn btn-light btn-block" name="category" value="@item.Id">
-                        @item.Name
-                    </button>
-                </form >
+                <a class="btn btn-light btn-block" name="category" asp-controller="Categories" asp-action="Index" asp-route-category="@item.Id">
+                    @item.Name
+                </a>
             </div>
         </div>
-    }
-</div>
+        }
+    </div>
+}
