--- a/src/GeekStream.Web/Views/Users/UserProfile.cshtml
+++ b/src/GeekStream.Web/Views/Users/UserProfile.cshtml
@@ -6,13 +6,15 @@
 
 
 <div class="card mb-2">
-    <div class="card-body align-items-center">
-        <h3 class="card-title">@Model.UserName</h3>
-        <div class="text-right mb-0">
-            <button class="btn btn-primary">Подписаться</button>
-            <button class="btn btn-outline-light">Написать</button>
+    <div class="card-body">
+        <div class="card-navbar justify-content-between">
+            <h3 class="card-title">@Model.UserName</h3>
+            <div>
+                <button class="btn btn-primary">Подписаться</button>
+                <button class="btn btn-outline-light">Написать</button>
+            </div>
         </div>
-</div>
+    </div>
 </div>
 
 <h3 mb-2>Статьи от данного автора</h3>
