Add subscribtions.Add Feed

--- a/src/GeekStream.Web/Views/Categories/Index.cshtml
+++ b/src/GeekStream.Web/Views/Categories/Index.cshtml
@@ -8,21 +8,37 @@
     <div class="card-body align-items-center">
         <div class="card-navbar justify-content-between">
             <h3 class="card-title">@Model.Name</h3>
-            <button class="btn btn-primary">Подписаться</button>
+            @if(Model.IsSubscribed)
+            {
+                <form asp-controller="Home" asp-action="Unsubscribe">
+                    <input type="hidden" asp-for="@Model.Id" />
+                    <input asp-for="Id" class="btn btn-outline-primary" type="submit" value="✓ Вы подписаны" script="window.location.reload()"/>
+                </form>
+            }
+            else
+            {
+                <form asp-controller="Home" asp-action="Subscribe">
+                    <input type="hidden" asp-for="@Model.Id" />
+                    <input class="btn btn-primary" type="submit"value="Подписаться" />
+                </form>
+            }
         </div>
     </div>
 </div>
 
 @foreach (var item in Model.Articles)
     {
+            
             <div class="card mb-2">
                 <div class="card-body">
                     <div class="card-navbar">
-                        <p>@Html.DisplayFor(modelItem => item.Category)</p>
+                    <a name="category" asp-controller="Categories" asp-action="Index" asp-route-category="@item.CategoryId">
+                        @item.Category
+                    </a>
                         <p>@Html.DisplayFor(modelItem => item.PublishedDate)</p>
-                        <p>@Html.DisplayFor(modelItem => item.Author)</p>
+                        <a asp-controller="Users" asp-action="UserProfile" asp-route-name="@item.Author">@Html.DisplayFor(modelItem => item.Author)</a>
                     </div>
-                    <a  asp-controller="Articles" asp-action="Details" asp-route-id="@item.Id">
+                    <a asp-controller="Articles" asp-action="Details" asp-route-id="@item.Id">
                         <h3 class="card-title"> @Html.DisplayFor(modelItem => item.Title)</h3>
                     </a>
                     <p>@Html.DisplayFor(modelItem => item.Content)</p>
