--- a/src/GeekStream.Web/Views/Shared/_Layout.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_Layout.cshtml
@@ -9,64 +9,14 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container h-100">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="/images/NavBarLogo.png" width="50" height="43" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1 align-items-center">
-                        <li class="nav-item mr-2">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">Статьи</a>
-                        </li>
-                        <li class="nav-item mr-2">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="All">Категории</a>
-                        </li>
-                        <li class="nav-item mr-2">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Авторы</a>
-                        </li>
-                        <li class="nav-item mr-2">
-                            <a class="btn btn-primary" asp-area="" asp-controller="Articles" asp-action="Create">Написать статью</a>
-                        </li>
-                        <li class="nav-item">
-                            <form class="form-inline" asp-controller="Articles" asp-action="Index" method="get">
-                                <input type="text" name="SearchString" class="form-control" placeholder="Найти статью">
-                            </form>
-                        </li>
-                    </ul>
-                    
-                    @{
-                        if (User.IsInRole("Reviewer"))
-                        {
-                            <a class="btn btn-outline-info" asp-area="" asp-controller="Articles" asp-action="Index">Проверить статьи</a>//TODO ACTION - PENDING
-                        }
-
-                        if (User.Identity.IsAuthenticated)
-                        {
-                            <form class="form-inline" asp-controller="Account" asp-action="Logout" method="post">
-                                <button type="submit" class="nav-link btn btn-link text-dark">Logout @User.Identity.Name</button>
-                            </form>
-                        }
-                        else
-                        {
-                            <a asp-area="" asp-controller="Account" asp-action="Login" class="mr-2 btn btn-primary">Войти</a>
-                            <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a>
-                        }
-                    }
-
-                </div>
-            </div>
-        </nav>
+        @await Html.PartialAsync("_Navbar")
     </header>
     <div class="container">
         <div class="row">
             <div class="col-md-3">
+                <h5 class="mb-2">Подписки</h5>
+                <div class="btn btn-outline-light">Все подряд</div>
                 @await RenderSectionAsync("subscriptions", required: false)
-                <div style="height: 200px; background-color: aqua">Dummy</div>
             </div>
             <div class="col">
                 @RenderBody()
